--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <title>演習1</title>
+        <title>ズンドコシステム</title>
         <style>
             #jsi-container-wrapper{
                 width: 300px;
